--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "googleapis": "^154.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.4.5",
-    "pdfjs-dist": "^5.4.54",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-pdf": "^10.0.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
